[package]
name = "dependy"
version = "0.3.0"
authors = ["Sean Cross <sean@xobs.io>"]
license = "MIT"
repository = "https://github.com/xobs/dependy"
description = "Dependency resolution with variable dependency types"
keywords = ["dependency", "resolver", "graph"]
categories = ["data-structures"]

[dependencies]
daggy = "0.4.1"
petgraph = "0.2.9"